fix some errors in intro.ipynb

--- a/enbios2/demos/intro.ipynb
+++ b/enbios2/demos/intro.ipynb
@@ -5,19 +5,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "import json\n",
+    "from copy import deepcopy\n",
     "import pandas as pd\n",
     "from enbios2.base.experiment import Experiment\n",
     "import bw2data\n",
@@ -35,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get an overview of brighway projects and databases\n",
+    "# get an overview of brightway projects and databases\n",
     "report()"
    ]
   },
@@ -46,8 +34,8 @@
    "outputs": [],
    "source": [
     "# select the brightway project and database (some ecoinvent database)\n",
-    "PROJECT_NAME = \"ecoinvent\"\n",
-    "DATABASE = \"cutoff_3.9.1_default\"\n",
+    "PROJECT_NAME = \"ecoinvent_391\"\n",
+    "DATABASE = \"ecoinvent_391_cutoff\"\n",
     "\n",
     "bw2data.projects.set_current(PROJECT_NAME)\n",
     "db = bw2data.Database(DATABASE)"
@@ -69,7 +57,7 @@
    "source": [
     "wind_turbines_spain = db.search(\n",
     "    \"electricity production, wind, 1-3MW turbine, onshore\", filter={\"location\": \"ES\"}\n",
-    ")\n",
+    ")[:2]\n",
     "wind_turbines_spain"
    ]
   },
@@ -121,14 +109,14 @@
    "outputs": [],
    "source": [
     "# let's store the raw data, because we want to modify it later\n",
-    "raw_data = {\n",
-    "    \"bw_project\": \"ecoinvent\",\n",
+    "simple_raw_data = {\n",
+    "    \"bw_project\": PROJECT_NAME,\n",
     "    \"activities\": experiment_activities,\n",
     "    \"methods\": experiment_methods,\n",
     "}\n",
     "\n",
     "# make a first validation of the experiment data\n",
-    "exp_data = ExperimentData(**raw_data)"
+    "exp_data = ExperimentData(**simple_raw_data)"
    ]
   },
   {
@@ -137,8 +125,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a experiment object. This will validate the activities, their outputs, the methods and the scenarios.\n",
-    "exp: Experiment = Experiment(exp_data)"
+    "# create experiment object. This will validate the activities, their outputs, the methods and the scenarios.\n",
+    "simple_experiment: Experiment = Experiment(exp_data)"
    ]
   },
   {
@@ -147,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(exp.info())"
+    "print(simple_experiment.info())"
    ]
   },
   {
@@ -164,7 +152,7 @@
    "outputs": [],
    "source": [
     "# run all scenarios at once\n",
-    "results = exp.run()"
+    "results = simple_experiment.run()"
    ]
   },
   {
@@ -207,7 +195,7 @@
    "outputs": [],
    "source": [
     "# we can dump the results into a csv file\n",
-    "exp.results_to_csv(\"test.csv\")\n",
+    "simple_experiment.results_to_csv(\"test.csv\")\n",
     "pd.read_csv(\"test.csv\").fillna(\"\")"
    ]
   },
@@ -217,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp.scenarios[0].result_to_dict()"
+    "simple_experiment.scenarios[0].result_to_dict()"
    ]
   },
   {
@@ -244,7 +232,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_data[\"activities\"].extend(\n",
+    "hierarchy_raw_data = deepcopy(simple_raw_data)\n",
+    "\n",
+    "hierarchy_raw_data[\"activities\"].extend(\n",
     "    [\n",
     "        {\"id\": {\"name\": activity[\"name\"], \"code\": activity[\"code\"]}}\n",
     "        for activity in solar_spain\n",
@@ -263,7 +253,7 @@
     "    \"solar\": [solar_act[\"name\"] for solar_act in solar_spain],\n",
     "}\n",
     "\n",
-    "raw_data[\"hierarchy\"] = hierarchy\n",
+    "hierarchy_raw_data[\"hierarchy\"] = hierarchy\n",
     "hierarchy"
    ]
   },
@@ -273,8 +263,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp = Experiment(raw_data)\n",
-    "exp"
+    "hierarchy_experiment = Experiment(hierarchy_raw_data)\n",
+    "hierarchy_experiment"
    ]
   },
   {
@@ -292,7 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp.run()"
+    "hierarchy_experiment.run()"
    ]
   },
   {
@@ -302,7 +292,7 @@
    "outputs": [],
    "source": [
     "# print(json.dumps((exp.scenarios[0].result_to_dict()), indent=2))\n",
-    "exp.scenarios[0].results_to_csv(\n",
+    "hierarchy_experiment.scenarios[0].results_to_csv(\n",
     "    \"test.csv\", level_names=[\"root\", \"technology\", \"activity\"]\n",
     ")\n",
     "pd.read_csv(\"test.csv\").fillna(\"\")"
@@ -324,20 +314,22 @@
    "source": [
     "from random import randint\n",
     "\n",
-    "activitiy_aliases = exp.activities_aliases()\n",
+    "activity_aliases = hierarchy_experiment.activities_aliases\n",
     "\n",
     "\n",
     "def create_random_scenario():\n",
     "    return {\n",
     "        \"activities\": {\n",
-    "            act: [\"kilowatt_hour\", randint(1, 10)] for act in activitiy_aliases\n",
+    "            act: [\"kilowatt_hour\", randint(1, 10)] for act in activity_aliases\n",
     "        }\n",
     "    }\n",
     "\n",
     "\n",
-    "raw_data[\"scenarios\"] = [create_random_scenario(), create_random_scenario()]\n",
+    "scenarios_raw_data = deepcopy(hierarchy_raw_data)\n",
     "\n",
-    "raw_data[\"scenarios\"]"
+    "scenarios_raw_data[\"scenarios\"] = [create_random_scenario(), create_random_scenario()]\n",
+    "\n",
+    "scenarios_raw_data[\"scenarios\"]"
    ],
    "metadata": {
     "collapsed": false
@@ -348,7 +340,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "exp = Experiment(raw_data)"
+    "scenarios_experiment = Experiment(scenarios_raw_data)"
    ],
    "metadata": {
     "collapsed": false
@@ -369,7 +361,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "_ = exp.run()"
+    "_ = scenarios_experiment.run()"
    ],
    "metadata": {
     "collapsed": false
@@ -380,19 +372,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "exp.scenarios[0].results_to_csv(\"s1.csv\", level_names=[\"root\", \"technology\", \"activity\"])\n",
+    "scenarios_experiment.scenarios[0].results_to_csv(\"s1.csv\", level_names=[\"root\", \"technology\", \"activity\"])\n",
     "pd.read_csv(\"s1.csv\").fillna(\"\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "raw_data[\"scenarios\"]"
    ],
    "metadata": {
     "collapsed": false
@@ -425,14 +406,52 @@
    "outputs": [],
    "source": [
     "all_results = {}\n",
-    "for activity in activitiy_aliases:\n",
-    "    all_results[activity] = {method_alias: [] for method_alias in exp.method_aliases}\n",
-    "    for scenario in exp.scenarios:\n",
+    "for activity in activity_aliases:\n",
+    "    all_results[activity] = {method_alias: [] for method_alias in scenarios_experiment.method_aliases}\n",
+    "    for scenario in scenarios_experiment.scenarios:\n",
     "        activity_result = scenario.result_tree.find_child_by_name(activity)\n",
     "        for method, score in activity_result.data.results.items():\n",
     "            all_results[activity][method].append(score)\n",
     "\n",
     "all_results"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "distribution_raw_data = deepcopy(simple_raw_data)\n",
+    "distribution_raw_data[\"config\"] = {\n",
+    "    \"use_k_bw_distributions\": 5\n",
+    "}\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "distribution_experiment = Experiment(distribution_raw_data)\n",
+    "results = distribution_experiment.run()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "results[\"default scenario\"].data.distribution_results"
    ],
    "metadata": {
     "collapsed": false
