fix some errors in intro.ipynb added tree demo notebook

--- a/enbios2/demos/intro.ipynb
+++ b/enbios2/demos/intro.ipynb
@@ -319,9 +319,7 @@
     "\n",
     "def create_random_scenario():\n",
     "    return {\n",
-    "        \"activities\": {\n",
-    "            act: [\"kilowatt_hour\", randint(1, 10)] for act in activity_aliases\n",
-    "        }\n",
+    "        \"activities\": {act: [\"kilowatt_hour\", randint(1, 10)] for act in activity_aliases}\n",
     "    }\n",
     "\n",
     "\n",
@@ -372,7 +370,9 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "scenarios_experiment.scenarios[0].results_to_csv(\"s1.csv\", level_names=[\"root\", \"technology\", \"activity\"])\n",
+    "scenarios_experiment.scenarios[0].results_to_csv(\n",
+    "    \"s1.csv\", level_names=[\"root\", \"technology\", \"activity\"]\n",
+    ")\n",
     "pd.read_csv(\"s1.csv\").fillna(\"\")"
    ],
    "metadata": {
@@ -407,7 +407,9 @@
    "source": [
     "all_results = {}\n",
     "for activity in activity_aliases:\n",
-    "    all_results[activity] = {method_alias: [] for method_alias in scenarios_experiment.method_aliases}\n",
+    "    all_results[activity] = {\n",
+    "        method_alias: [] for method_alias in scenarios_experiment.method_aliases\n",
+    "    }\n",
     "    for scenario in scenarios_experiment.scenarios:\n",
     "        activity_result = scenario.result_tree.find_child_by_name(activity)\n",
     "        for method, score in activity_result.data.results.items():\n",
@@ -425,10 +427,7 @@
    "outputs": [],
    "source": [
     "distribution_raw_data = deepcopy(simple_raw_data)\n",
-    "distribution_raw_data[\"config\"] = {\n",
-    "    \"use_k_bw_distributions\": 5\n",
-    "}\n",
-    "\n"
+    "distribution_raw_data[\"config\"] = {\"use_k_bw_distributions\": 5}"
    ],
    "metadata": {
     "collapsed": false
