--- a/enbios2/demos/multiple_config_files.ipynb
+++ b/enbios2/demos/multiple_config_files.ipynb
@@ -45,11 +45,32 @@
     "raw_data = {\n",
     "    \"bw_project\": PROJECT_NAME,\n",
     "    \"bw_default_database\": DATABASE,\n",
+    "    \"activities\": \"single_activity.json\",\n",
+    "    \"methods\": \"methods.csv\",\n",
+    "    \"config\": {\"base_directory\": BASE_PATH},\n",
+    "}\n",
+    "experiment = Experiment(raw_data)\n",
+    "experiment"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "30904e1164228e21"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "raw_data = {\n",
+    "    \"bw_project\": PROJECT_NAME,\n",
+    "    \"bw_default_database\": DATABASE,\n",
     "    \"activities\": BASE_PATH / \"single_activity.json\",\n",
     "    \"methods\": BASE_PATH / \"methods.csv\",\n",
     "    \"hierarchy\": BASE_PATH / \"hierarchy.json\",\n",
     "}\n",
     "experiment = Experiment(raw_data)\n",
+    "experiment.hierarchy_root.as_dict()\n",
     "experiment"
    ],
    "metadata": {
@@ -76,40 +97,6 @@
     "collapsed": false
    },
    "id": "b7f26c1c80066b22"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "experiment.hierarchy_root.children[0]"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "62b0f32fcfc043f3"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "experiment.hierarchy_root.as_dict()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "f807b1c82d0a644b"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "aeb1053d60036f24"
   }
  ],
  "metadata": {
