moved test files

--- a/enbios/demos/intro.ipynb
+++ b/enbios/demos/intro.ipynb
@@ -2,17 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating logging config file at: /home/ra/projects/enbios/enbios/demos/data/logging.json\n",
-      "Creating 'ecoinvent_pint_unit_match' file at: /home/ra/projects/enbios/enbios/demos/data/ecoinvent_pint_unit_match.txt\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from copy import deepcopy\n",
     "import pandas as pd\n",
@@ -23,34 +14,14 @@
     "from enbios.models.experiment_models import ExperimentData"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-09T09:08:56.333174295Z",
-     "start_time": "2023-11-09T09:08:53.373175042Z"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-09T09:09:21.178842562Z",
-     "start_time": "2023-11-09T09:09:21.148803807Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Project: default\n",
-      "[]\n",
-      "Project: ecoinvent_391\n",
-      "['biosphere3', 'ecoinvent_391_cutoff']\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# get an overview of brightway projects and databases\n",
     "report()"
@@ -58,13 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-09T09:09:51.005785077Z",
-     "start_time": "2023-11-09T09:09:50.959607360Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# select the brightway project and database (some ecoinvent database)\n",
@@ -85,30 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-09T09:10:05.150948770Z",
-     "start_time": "2023-11-09T09:10:04.955870997Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Excluding 319 filtered results\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "['electricity production, wind, >3MW turbine, onshore' (kilowatt hour, ES, None),\n 'electricity production, wind, 1-3MW turbine, onshore' (kilowatt hour, ES, None)]"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "wind_turbines_spain = db.search(\n",
     "    \"electricity production, wind, 1-3MW turbine, onshore\", filter={\"location\": \"ES\"}\n",
@@ -118,13 +63,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-09T09:10:13.109237813Z",
-     "start_time": "2023-11-09T09:10:13.105529416Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# for the experiment we need to create a list of activities (or a dict, where the keys represent the aliases)\n",
@@ -140,23 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-09T09:10:30.141254468Z",
-     "start_time": "2023-11-09T09:10:30.095384135Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[{'id': {'name': 'electricity production, wind, >3MW turbine, onshore',\n   'code': '0d48975a3766c13e68cedeb6c24f6f74'},\n  'output': ['kilowatt_hour', 3]},\n {'id': {'name': 'electricity production, wind, 1-3MW turbine, onshore',\n   'code': 'ed3da88fc23311ee183e9ffd376de89b'}}]"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# we can modify the output of the activities, by default it is the reference product (1 of the activity unit)\n",
     "experiment_activities[0][\"output\"] = [\"kilowatt_hour\", 3]\n",
