--- a/enbios/demos/intro.ipynb
+++ b/enbios/demos/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from copy import deepcopy\n",
@@ -14,14 +14,34 @@
     "from enbios.models.experiment_models import ExperimentData"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-14T17:08:09.526171020Z",
+     "start_time": "2023-11-14T17:08:07.076013897Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-14T17:08:09.549091520Z",
+     "start_time": "2023-11-14T17:08:09.528879961Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Project: default\n",
+      "[]\n",
+      "Project: ecoinvent_391\n",
+      "['biosphere3', 'ecoinvent_391_cutoff']\n"
+     ]
+    }
+   ],
    "source": [
     "# get an overview of brightway projects and databases\n",
     "report()"
@@ -29,8 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-14T17:08:09.609933102Z",
+     "start_time": "2023-11-14T17:08:09.551056069Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# select the brightway project and database (some ecoinvent database)\n",
@@ -51,9 +76,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-14T17:08:09.787715277Z",
+     "start_time": "2023-11-14T17:08:09.561085373Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excluding 319 filtered results\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "['electricity production, wind, >3MW turbine, onshore' (kilowatt hour, ES, None),\n 'electricity production, wind, 1-3MW turbine, onshore' (kilowatt hour, ES, None)]"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "wind_turbines_spain = db.search(\n",
     "    \"electricity production, wind, 1-3MW turbine, onshore\", filter={\"location\": \"ES\"}\n",
@@ -63,8 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-14T18:54:59.816463692Z",
+     "start_time": "2023-11-14T18:54:59.771435582Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# for the experiment we need to create a list of activities (or a dict, where the keys represent the aliases)\n",
@@ -80,9 +131,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-14T17:08:09.788393693Z",
+     "start_time": "2023-11-14T17:08:09.787670975Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[{'id': {'name': 'electricity production, wind, >3MW turbine, onshore',\n   'code': '0d48975a3766c13e68cedeb6c24f6f74'},\n  'output': ['kilowatt_hour', 3]},\n {'id': {'name': 'electricity production, wind, 1-3MW turbine, onshore',\n   'code': 'ed3da88fc23311ee183e9ffd376de89b'}}]"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# we can modify the output of the activities, by default it is the reference product (1 of the activity unit)\n",
     "experiment_activities[0][\"output\"] = [\"kilowatt_hour\", 3]\n",
@@ -91,9 +156,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-14T17:08:10.985240465Z",
+     "start_time": "2023-11-14T17:08:10.979297339Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[{'id': ('ReCiPe 2016 v1.03, midpoint (H)',\n   'ozone depletion',\n   'ozone depletion potential (ODPinfinite)')},\n {'id': ('ReCiPe 2016 v1.03, midpoint (H)',\n   'land use',\n   'agricultural land occupation (LOP)')}]"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# select 2 random methods and convert them into the form for enbios2\n",
     "methods = [bw2data.methods.random() for _ in range(2)]\n",
