include method units in results

--- a/enbios/demos/intro.ipynb
+++ b/enbios/demos/intro.ipynb
@@ -6,10 +6,11 @@
    "outputs": [],
    "source": [
     "from copy import deepcopy\n",
-    "import pandas as pd\n",
-    "from enbios.base.experiment import Experiment\n",
-    "import bw2data\n",
     "\n",
+    "import bw2data\n",
+    "import pandas as pd\n",
+    "\n",
+    "from enbios.base.experiment import Experiment\n",
     "from enbios.bw2.util import report\n",
     "from enbios.models.experiment_models import ExperimentData"
    ],
@@ -180,6 +181,24 @@
     "\n",
     "experiment_methods"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# alternatively, we could just specify two methods\n",
+    "experiment_methods = [\n",
+    "    {\"id\": ('ReCiPe 2016 v1.03, midpoint (H)',\n",
+    "            'climate change',\n",
+    "            'global warming potential (GWP1000)')},\n",
+    "    {\"id\": ('ReCiPe 2016 v1.03, midpoint (H)',\n",
+    "            'ecotoxicity: freshwater',\n",
+    "            'freshwater ecotoxicity potential (FETP)')}]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
