New demo works with 2 adapters

--- a/enbios/demos/intro.ipynb
+++ b/enbios/demos/intro.ipynb
@@ -189,12 +189,21 @@
    "source": [
     "# alternatively, we could just specify two methods\n",
     "experiment_methods = [\n",
-    "    {\"id\": ('ReCiPe 2016 v1.03, midpoint (H)',\n",
-    "            'climate change',\n",
-    "            'global warming potential (GWP1000)')},\n",
-    "    {\"id\": ('ReCiPe 2016 v1.03, midpoint (H)',\n",
-    "            'ecotoxicity: freshwater',\n",
-    "            'freshwater ecotoxicity potential (FETP)')}]"
+    "    {\n",
+    "        \"id\": (\n",
+    "            \"ReCiPe 2016 v1.03, midpoint (H)\",\n",
+    "            \"climate change\",\n",
+    "            \"global warming potential (GWP1000)\",\n",
+    "        )\n",
+    "    },\n",
+    "    {\n",
+    "        \"id\": (\n",
+    "            \"ReCiPe 2016 v1.03, midpoint (H)\",\n",
+    "            \"ecotoxicity: freshwater\",\n",
+    "            \"freshwater ecotoxicity potential (FETP)\",\n",
+    "        )\n",
+    "    },\n",
+    "]"
    ],
    "metadata": {
     "collapsed": false
